# openfimg

./: 02-pmem-gpu1-config.patch  Android.mk  Makefile.am  README  autogen.sh  configure.ac
include/: drm.h
include/EGL/: eglext.h  eglplatform.h
include/drm/: exynos_drm.h
libcopybit/: Android.mk  copybit.cpp
libgralloc/: Android.mk  allocator.cpp  framebuffer.cpp  gralloc.cpp  gralloc_priv.h  mapper.cpp  s3c_g2d.h
libsgl/: Android.mk  Doxyfile  Makefile.am  common.h  egl.cpp  eglAndroid.cpp  eglBase.cpp  eglCommon.h  eglFramebuffer.cpp  eglMem.cpp  eglMem.h  fglbufferobject.h  fglframebuffer.cpp  fglframebuffer.h  fglframebufferattachable.h  fglimage.h  fglmatrix.cpp  fglmatrix.h  fglobject.h  fglobjectmanager.h  fglpixelformat.h  fglpoolallocator.h  fglrenderbuffer.h  fglrendersurface.h  fglstack.h  fglsurface.cpp  fglsurface.h  fgltextureobject.h  fshader.asm  fshader.h  gles.cpp  glesBase.cpp  glesCommon.h  glesFramebuffer.cpp  glesFramebuffer.h  glesGet.cpp  glesMatrix.cpp  glesPixel.cpp  glesTex.cpp  matrix.cpp  (+6 more)
libsgl/fimg/: Android.mk  common.h  compat.c  compat.h  config.h  fimg.h  fimg_private.h  fragment.c  fragment.h  global.c  global.h  host.c  host.h  primitive.c  primitive.h  raster.c  raster.h  shaders.c  shaders.h  system.c  texture.c  texture.h
libsgl/fimg/shaders/: frag.asm  frag.h  genshader  vert.asm  vert.h
libsgl/libfimg/: Android.mk  Doxyfile  Makefile.am  assembler.h  compat.c  config.h  dump.c  fimg.h  fimg_private.h  fragment.c  global.c  host.c  host.h  host_contig.c  host_index16.c  host_index32.c  host_index8.c  host_new.c  host_template.h  memcpy.S  platform.h  primitive.c  raster.c  s3c_g3d.h  shaders.c  system.c  texture.c
libsgl/libfimg/shaders/: .gitignore  frag.asm  frag.h  genshader  vert.asm  vert.h
libsgl/shaders/: frag.asm
modules/: Makefile
modules/g2d/: Makefile  g2d_regs.h  s3c_g2d.c  s3c_g2d.h  s3c_g2d_driver.c
modules/g3d/: Makefile  s3c_g3d.c
patches/: 01-pmem-backport.patch
