SUBDIRS = libsgl

ACLOCAL_AMFLAGS = -I m4

EXTRA_DIST = \
	README

MAINTAINERCLEANFILES = \
	configure \
	config.guess \
	config.sub \
	install-sh \
	ltmain.sh \
	autoscan.log \
	configure.scan \
	missing \
	depcomp \
	aclocal.m4 \
	config.h.in \
	Makefile.in \
	aclocal.m4 \
	m4/libtool.m4 \
	m4/ltoptions.m4 \
	m4/ltsugar.m4 \
	m4/ltversion.m4 \
	m4/lt~obsolete.m4 \
	$(DIST_ARCHIVES)
